Abstract ReplayMod access behind versioned accessor + settings mapper
- Add isRelayOverlayVisible/hasReplayHandler/recordingControls to ReplayMod accessor, impl per version
- Drop direct com.replaymod usage in main source set, route via ReplayModUtil
- Remove main GuiRecordingControls/GuiReplayViewer accessors
- Convert ReplayModSettingsConverter to versioned @AutoService ReplayModSettingsMapper loaded via CustomServiceLoader
- Move ReplayModSettingAccessor to per-version source sets
- Move 26.1.x modrinth deps to modrinth() helper, drop javaVersion override